Icons sliding around the top of the screen

--- a/dream_launcher/dream_launcher.vcxproj
+++ b/dream_launcher/dream_launcher.vcxproj
@@ -172,11 +172,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\BounceText.cpp" />
+    <ClCompile Include="src\GameIcon.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BounceText.h" />
+    <ClInclude Include="src\GameIcon.h" />
     <ClInclude Include="src\ofApp.h" />
   </ItemGroup>
   <ItemGroup>
