--- a/dream_launcher/dream_launcher.vcxproj.filters
+++ b/dream_launcher/dream_launcher.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="src\BounceText.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\GameIcon.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -21,6 +24,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\BounceText.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GameIcon.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
