--- a/dream_launcher/dream_launcher.vcxproj.filters
+++ b/dream_launcher/dream_launcher.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="src\TopText.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Background.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -39,6 +42,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\TopText.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Background.hpp">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
